@@ -1,5 +1,5 @@
-<!ENTITY version "SVN-20110523">
-<!ENTITY releasedate "May 23, 2011">
+<!ENTITY version "SVN-20110531">
+<!ENTITY releasedate "May 31, 2011">
 <!ENTITY copyrightdate "1999-2011"><!-- jhalfs needs a literal dash, not &ndash; -->
 <!ENTITY milestone "6.9">
 <!ENTITY generic-version "development"> <!-- Use "development", "testing", or "x.y[-pre{x}]" -->
